# burn

./: Cargo.toml
crates/burn/: Cargo.toml
crates/burn-autodiff/src/ops/: qtensor.rs  tensor.rs
crates/burn-backend/: Cargo.toml
crates/burn-backend-extension/src/: lib.rs
crates/burn-backend-tests/tests/fusion/: matmul_prologue.rs  mod.rs
crates/burn-backend/src/: cubecl.rs  lib.rs
crates/burn-backend/src/backend/ops/: qtensor.rs  tensor.rs
crates/burn-backend/src/quantization/: scheme.rs
crates/burn-core/: Cargo.toml
crates/burn-cubecl-fusion/src/engine/: fuser.rs  scoring.rs
crates/burn-cubecl-fusion/src/engine/codegen/: ir.rs  kernel.rs  view.rs
crates/burn-cubecl-fusion/src/engine/launch/: input.rs
crates/burn-cubecl-fusion/src/engine/trace/: base.rs
crates/burn-cubecl/src/: fusion.rs
crates/burn-cubecl/src/ops/: base.rs  bool_tensor.rs  int_tensor.rs  qtensor.rs  tensor.rs
crates/burn-cubecl/src/tensor/: quantization.rs
crates/burn-dispatch/: Cargo.toml
crates/burn-dispatch/src/: backend.rs  device.rs  lib.rs  macros.rs  tensor.rs
crates/burn-dispatch/src/ops/: qtensor.rs  tensor.rs
crates/burn-fusion/src/ops/: qtensor.rs  tensor.rs
crates/burn-ir/src/: builder.rs  handle.rs
crates/burn-metal4/: Cargo.toml
crates/burn-metal4/src/: lib.rs
crates/burn-ndarray/src/: tensor.rs
crates/burn-ndarray/src/ops/: qtensor.rs
crates/burn-router/src/ops/: tensor.rs
crates/burn-std/src/data/: tensor.rs
crates/burn-std/src/tensor/: dtype.rs  quantization.rs
crates/burn-tensor/: Cargo.toml
(+19 files in other folders)
